Bug 858459 - Ignore clicks that have no target content or frame to avoid dispatching it to the document that the pres shell otherwise does. r=smaug , a=akeybl/bajaj